--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -2,30 +2,46 @@
   background: #f5f4fa;
 }
 .our-team__title {
-  margin-bottom: 50px;
+  padding-top: 60px;
+  padding-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   color: $main-color-black;
 }
+
 img {
   display: block;
+  width: 100%;
 }
+
 .our-team__img {
-  display: flex;
+  @media screen and(min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
 }
+
 .our-team__residents {
-  width: 270px;
   background: $main-color-white;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 60px) / 2);
+    margin: 15px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 120px) / 4);
+    margin: 15px;
+  }
 }
-.our-team__residents:not(:last-child) {
-  margin-right: 30px;
-}
+
 .our-team__names {
   margin-bottom: 10px;
   font-size: 16px;
