--- a/sass/components/_about-section.scss
+++ b/sass/components/_about-section.scss
@@ -1,5 +1,11 @@
 .about {
-  padding-top: 0;
+  @media screen and(max-width:1199px) {
+    display: none;
+    padding-top: 0;
+  }
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
 }
 
 .about__title {
