--- a/sass/components/_header-section.scss
+++ b/sass/components/_header-section.scss
@@ -1,7 +1,339 @@
-.header {
-  border-bottom: solid #ececec 1px;
+.logo {
+  align-self: center;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+
+  letter-spacing: 0.03em;
+  text-decoration: none;
+
+  color: $main-color-blue;
+  @media screen and (max-width: 1199px) {
+    font-size: 24px;
+    line-height: 1.16;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
-.header .container {
-  display: flex;
+.logo__accent {
+  color: #000000;
+}
+
+.contact {
+  @media screen and (max-width: 767px) {
+    margin-top: 302px;
+    margin-bottom: 64px;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-top: 21px;
+    margin-left: 96px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 312px;
+    display: flex;
+    align-items: center;
+  }
+}
+
+.contact__link.telephone {
+  @media screen and (max-width: 767px) {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 40px;
+    letter-spacing: 0.02em;
+
+    color: #2196f3;
+  }
+}
+
+.contact__link.mailto {
+  @media screen and (max-width: 767px) {
+    color: #757575;
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+  }
+}
+
+.contact__link {
+  text-decoration: none;
+
+  @media screen and (min-width: 768px) {
+    font-weight: 500;
+    font-size: 11px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    color: #757575;
+  }
+  @media screen and (min-width: 1200px) {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    transition-property: color;
+
+    color: #757575;
+  }
+}
+
+.contact__item .contact__link:hover,
+.contact__item .contact__link:focus {
+  color: #2196f3;
+}
+
+.nav__item {
+  @media screen and (max-width: 767px) {
+    
+      margin-top: 32px;
+      
+  }
+
+  @media screen and (min-width: 768px) {
+    position: relative;
+    padding-bottom: 32px;
+    padding-top: 32px;
+  }
+}
+
+.nav__link {
+  @media screen and(max-width:767px) {
+    text-decoration: none;
+    color: #212121;
+  }
+  @media screen and (min-width: 768px) {
+    text-decoration: none;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    transition-property: color;
+    color: #212121;
+  }
+}
+
+.nav__link::after {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
+  opacity: 0;
+}
+
+.nav__link::after {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
+  opacity: 0;
+}
+
+.nav__link.nav__link--current::after {
+  opacity: 1;
+}
+
+.nav__link--current {
+  color: #2196f3;
+}
+
+.nav__item .nav__link:hover,
+.nav__item .nav__link:focus {
+  color: #2196f3;
+}
+
+.envelope {
+  @media screen and (min-width: 768px) {
+    margin-right: 8px;
+    width: 14px;
+    height: 10px;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    transition-property: fill;
+    fill: #757575;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 10px;
+    width: 16px;
+    height: 12px;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    transition-property: fill;
+    fill: #757575;
+  }
+}
+
+.smartphone {
+  @media screen and (min-width: 768px) {
+    margin-right: 8px;
+    width: 10px;
+    height: 14px;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    transition-property: fill;
+    fill: #757575;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 10px;
+    margin-left: 30px;
+    width: 10px;
+    height: 16px;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    transition-property: fill;
+    fill: #757575;
+  }
+}
+
+.contact__link:hover .contact__icon {
+  fill: #2196f3;
+}
+
+.mobile-backdrop__nav {
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+}
+
+.contact__icon {
+  margin-right: 10px;
+
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
+  transition-property: fill;
+
+  fill: $main-fill-grey;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+}
+
+.contact__item {
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 32px;
+    }
+  }
+}
+
+.menu-button {
+  @media screen and(max-width:767px) {
+    margin-left: 258px;
+    cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: none;
+    background-color: transparent;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+.menu-button.is-open {
+  position: fixed;
+  z-index: 200;
+  top: 21px;
+  right: 25px;
+}
+
+.mobile-backdrop {
+  @media screen and (max-width: 767px) {
+    display: none;
+    position: fixed;
+    padding-left: 40px;
+    padding-top: 48px;
+    padding-bottom: 48px;
+    font-size: 20px;
+    background-color: #ffffff;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+}
+
+.social-links {
+  @media screen and (max-width: 767px) {
+    display: flex;
+  }
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+.mobile-backdrop.is-open {
+  display: block;
+}
+
+.menu-button .icon-close {
+  display: none;
+}
+
+.menu-button.is-open .icon-close {
+  display: block;
+}
+
+.menu-button.is-open .icon-burger {
+  display: none;
+}
+
+.nav__list {
+  @media screen and (max-width: 767px) {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 47px;
+    letter-spacing: 0.02em;
+
+    color: #212121;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    margin-left: 88px;
+    gap: 50px;
+  }
+}
+
+
+
+.social-links__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+
+  color: #2196f3;
+}
+
+.social-links__item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.social-links__link {
+  margin-right: 10px;
+}
+
+.social-links__item:not(:last-child) {
+  margin-right: 10px;
 }
