--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -1,10 +1,7 @@
 .hero {
-  max-width: 1600px;
-  height: 600px;
+  padding: 118px 60px;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
 
   text-align: center;
 
@@ -14,13 +11,14 @@
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/Img-hero.jpg);
+  background-size: cover;
 }
 
 .hero-title {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.61;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -30,8 +28,8 @@
   border: 0;
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 32px;
-  padding-right: 32px;
+  padding-left: 24px;
+  padding-right: 24px;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
