--- a/sass/components/_portfolio-page.scss
+++ b/sass/components/_portfolio-page.scss
@@ -95,10 +95,31 @@
 }
 .project__list {
   position: relative;
-  width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
+  
+  @media screen and (min-width:768px) {
+    width: 354px;
+    
+    &:nth-child(2n) {
+    margin-right: 0;}
 
+    &:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+
+  }
+
+  @media screen and (min-width:1200px) {
+    width: 370px;
+    
+    &:nth-child(3n) {
+    margin-right: 0;
+  }
+
+    &:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }}
+  
   &:hover,
   &:focus {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -110,11 +131,4 @@
   &:hover .overlay-portfolio {
     transform: translateY(0);
   }
-}
-
-.project__list:nth-child(3n) {
-  margin-right: 0;
-}
-.project__list:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
+}}
