--- a/sass/components/_subscribe-form.scss
+++ b/sass/components/_subscribe-form.scss
@@ -1,8 +1,3 @@
-.subscribe {
-  margin-left: auto;
-  color: $main-color-white;
-}
-
 .subscribe__title {
   margin-bottom: 20px;
   font-weight: 700;
@@ -14,18 +9,9 @@
   color: $main-color-white;
 }
 
-.subscribe__form {
-  display: flex;
-  align-items: center;
-}
-
 .subscribe__button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 200px;
   height: 50px;
-  padding: 0;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
@@ -48,13 +34,12 @@
 }
 
 .subscribe__input {
-  display: flex;
   align-items: center;
+  margin-bottom: 20px;
   min-width: 358px;
   height: 50px;
   padding: 0;
   padding-left: 16px;
-  margin-right: 12px;
   font-size: 16px;
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
