--- a/sass/components/_footer-section.scss
+++ b/sass/components/_footer-section.scss
@@ -20,7 +20,9 @@
 }
 
 .footer__address {
-  margin-bottom: 60px;
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 60px;
+  }
 }
 
 .footer-logo {
