--- a/sass/components/_header-section.scss
+++ b/sass/components/_header-section.scss
@@ -29,8 +29,7 @@
   }
 
   @media screen and (min-width: 768px) {
-    padding-top: 21px;
-    margin-left: 96px;
+    margin-left: auto;
   }
 
   @media screen and (min-width: 1200px) {
@@ -91,9 +90,7 @@
 
 .nav__item {
   @media screen and (max-width: 767px) {
-    
-      margin-top: 32px;
-      
+    margin-top: 32px;
   }
 
   @media screen and (min-width: 768px) {
@@ -314,8 +311,6 @@
     gap: 50px;
   }
 }
-
-
 
 .social-links__link {
   font-weight: 500;
