--- a/sass/components/_header-section.scss
+++ b/sass/components/_header-section.scss
@@ -39,6 +39,10 @@
   }
 }
 
+.header-wrap {
+  display: flex;
+}
+
 .contact__link.telephone {
   @media screen and (max-width: 767px) {
     font-weight: 500;
