--- a/sass/components/_feature-section.scss
+++ b/sass/components/_feature-section.scss
@@ -44,7 +44,7 @@
 
 .feature__title {
   margin-bottom: 10px;
-  text-align: center;
+  text-align: left;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
