--- a/sass/components/_portfolio-page.scss
+++ b/sass/components/_portfolio-page.scss
@@ -97,38 +97,40 @@
   position: relative;
   margin-right: 30px;
   margin-bottom: 30px;
-  
-  @media screen and (min-width:768px) {
+
+  @media screen and (min-width: 768px) {
     width: 354px;
-    
+
     &:nth-child(2n) {
-    margin-right: 0;}
+      margin-right: 0;
+    }
 
     &:nth-last-child(-n + 2) {
-    margin-bottom: 0;
+      margin-bottom: 0;
+    }
 
-  }
+    @media screen and (min-width: 1200px) {
+      width: 370px;
 
-  @media screen and (min-width:1200px) {
-    width: 370px;
-    
-    &:nth-child(3n) {
-    margin-right: 0;
-  }
+      &:nth-child(3n) {
+        margin-right: 0;
+      }
 
-    &:nth-last-child(-n + 3) {
-    margin-bottom: 0;
-  }}
-  
-  &:hover,
-  &:focus {
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 250ms;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
+      &:nth-last-child(-n + 3) {
+        margin-bottom: 0;
+      }
+    }
 
-  &:hover .overlay-portfolio {
-    transform: translateY(0);
+    &:hover,
+    &:focus {
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      transition-duration: 250ms;
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+
+    &:hover .overlay-portfolio {
+      transform: translateY(0);
+    }
   }
-}}
+}
