--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -95,6 +95,8 @@
   color: $main-color-white;
 }
 .hero-button {
+  display: block;
+  margin: 0 auto;
   border: 0;
   padding-top: 10px;
   padding-bottom: 10px;
