--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -33,6 +33,14 @@
 
 .modal {
   padding: 40px;
+  @media screen and (min-width: 480px) {
+    width: 450px;
+    height: 609px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .modal__title {
