--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -5,6 +5,10 @@
   fill: #afb1b8;
 }
 
+.social-links__link {
+  text-decoration: none;
+}
+
 .social-net__link {
   display: flex;
   align-items: center;
