--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,50 @@ ul {
   list-style: none;
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.container {
+  padding: 0px 15px 0px 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1199px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .logo {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
@@ -22,6 +66,14 @@ ul {
   letter-spacing: 0.03em;
   text-decoration: none;
   color: #2196f3;
+}
+
+@media screen and (max-width: 767px) {
+  .logo {
+    font-size: 24px;
+    line-height: 1.16;
+    padding: 16px 0;
+  }
 }
 
 @media screen and (max-width: 1199px) {
@@ -43,9 +95,21 @@ ul {
 }
 
 @media screen and (max-width: 767px) {
-  .contact {
+  .mobile-contact {
     margin-top: 302px;
     margin-bottom: 64px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-contact {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contact {
+    display: none;
   }
 }
 
@@ -57,7 +121,7 @@ ul {
 
 @media screen and (min-width: 1200px) {
   .contact {
-    margin-left: 312px;
+    margin-left: auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -163,32 +227,18 @@ ul {
     transition-property: color;
     color: #212121;
   }
-}
-
-.nav__link::after {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  background: #2196f3;
-  border-radius: 2px;
-  opacity: 0;
-}
-
-.nav__link::after {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  background: #2196f3;
-  border-radius: 2px;
-  opacity: 0;
+  .nav__link::after {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background: #2196f3;
+    border-radius: 2px;
+    opacity: 0;
+  }
 }
 
 .nav__link.nav__link--current::after {
@@ -270,7 +320,7 @@ ul {
 }
 
 @media screen and (min-width: 768px) {
-  .mobile-backdrop__nav {
+  .nav {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -346,6 +396,9 @@ ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -379,9 +432,12 @@ ul {
   display: none;
 }
 
+.nav__list {
+  font-weight: 500;
+}
+
 @media screen and (max-width: 767px) {
   .nav__list {
-    font-weight: 500;
     font-size: 40px;
     line-height: 47px;
     letter-spacing: 0.02em;
@@ -498,6 +554,8 @@ ul {
 }
 
 .hero-button {
+  display: block;
+  margin: 0 auto;
   border: 0;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -726,6 +784,10 @@ img {
   width: 20px;
   height: 20px;
   fill: #afb1b8;
+}
+
+.social-links__link {
+  text-decoration: none;
 }
 
 .social-net__link {
@@ -1067,6 +1129,13 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (max-width: 1199px) {
+  .subscribe__button {
+    display: block;
+    margin: 0 auto;
+  }
+}
+
 .subscribe__icon {
   margin-left: 10px;
   width: 24px;
@@ -1172,6 +1241,20 @@ img {
 
 .modal {
   padding: 40px;
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .modal__title {
