--- a/sass/components/_header-section.scss
+++ b/sass/components/_header-section.scss
@@ -7,6 +7,11 @@
   text-decoration: none;
 
   color: $main-color-blue;
+  @media screen and (max-width: 767px) {
+    font-size: 24px;
+    line-height: 1.16;
+    padding: 16px 0;
+  }
   @media screen and (max-width: 1199px) {
     font-size: 24px;
     line-height: 1.16;
@@ -22,10 +27,19 @@
   color: #000000;
 }
 
-.contact {
+.mobile-contact {
   @media screen and (max-width: 767px) {
     margin-top: 302px;
     margin-bottom: 64px;
+  }
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+.contact {
+  @media screen and (max-width: 767px) {
+    display: none;
   }
 
   @media screen and (min-width: 768px) {
@@ -33,7 +47,7 @@
   }
 
   @media screen and (min-width: 1200px) {
-    margin-left: 312px;
+    margin-left: auto;
     display: flex;
     align-items: center;
   }
@@ -116,33 +130,20 @@
     transition-duration: 250ms;
     transition-property: color;
     color: #212121;
+
+    &::after {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      content: "";
+      display: block;
+      width: 100%;
+      height: 4px;
+      background: #2196f3;
+      border-radius: 2px;
+      opacity: 0;
+    }
   }
-}
-
-.nav__link::after {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  background: #2196f3;
-  border-radius: 2px;
-  opacity: 0;
-}
-
-.nav__link::after {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  background: #2196f3;
-  border-radius: 2px;
-  opacity: 0;
 }
 
 .nav__link.nav__link--current::after {
@@ -206,7 +207,7 @@
   fill: #2196f3;
 }
 
-.mobile-backdrop__nav {
+.nav {
   @media screen and (min-width: 768px) {
     display: flex;
   }
@@ -272,6 +273,7 @@
 
   @media screen and (min-width: 768px) {
     display: flex;
+    align-items: center;
   }
 }
 
@@ -301,8 +303,9 @@
 }
 
 .nav__list {
+  font-weight: 500;
+
   @media screen and (max-width: 767px) {
-    font-weight: 500;
     font-size: 40px;
     line-height: 47px;
     letter-spacing: 0.02em;
