--- a/sass/components/_subscribe-form.scss
+++ b/sass/components/_subscribe-form.scss
@@ -23,6 +23,11 @@
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (max-width: 1199px) {
+    display: block;
+    margin: 0 auto;
+  }
 }
 
 .subscribe__icon {
