--- a/sass/components/_feature-section.scss
+++ b/sass/components/_feature-section.scss
@@ -25,24 +25,20 @@
 }
 
 .feature__container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 120px;
   background-color: #f5f4fa;
+  margin-bottom: 30px;
   border-radius: 4px;
-
-  @media screen and (min-width: 480px) {
-    padding: 25px 190px;
-    margin-bottom: 30px;
-  }
-
-  @media screen and (min-width: 768px) {
-    padding: 25px 142px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    padding: 25px 100px;
-  }
 }
 
 .feature__title {
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
   margin-bottom: 10px;
   text-align: left;
   font-weight: 700;
