--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -1,20 +1,18 @@
 .hero {
   margin-left: auto;
   margin-right: auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
 
-  @media (min-width: 1199px) {
-    padding-top: 200px;
-    padding-bottom: 200px;
-    height: 600px;
+  @media (max-width: 1199px) {
+    padding-top: 118px;
+    padding-bottom: 118px;
+    height: 400px;
   }
 
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/Img-hero.jpg);
+    url(../images/tabbanner.jpg);
 
   max-width: 1600px;
   background-size: cover;
@@ -27,7 +25,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../images/Img-hero.jpg), url("../images/mobbanner.jpg");
+      url(../images/mobbanner.jpg), url("../images/mobbanner.jpg");
   }
 
   @media (max-width: 767px) and (min-device-pixel-ratio: 2),
@@ -87,12 +85,19 @@
 .hero-title {
   margin-bottom: 30px;
   font-weight: 900;
-  font-size: 44px;
   line-height: 1.61;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: $main-color-white;
+
+  @media screen and (max-width: 1199px) {
+    font-size: 26px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 44px;
+  }
 }
 .hero-button {
   display: block;
