--- a/sass/common/_common.scss
+++ b/sass/common/_common.scss
@@ -7,9 +7,11 @@ body {
 }
 
 .container {
-  padding: 0px 15px 0px 15px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+
   @media screen and(min-width:480px) {
     width: 480px;
   }
