--- a/css/main.css
+++ b/css/main.css
@@ -303,7 +303,7 @@ body {
 
 @media screen and (max-width: 767px) {
   .menu-button {
-    margin-left: 258px;
+    margin-left: auto;
     cursor: pointer;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border: none;
@@ -619,7 +619,7 @@ body {
 }
 
 .our-team__title {
-  padding-bottom: 30px;
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 28px;
   line-height: 1.17;
@@ -760,7 +760,7 @@ img {
 
 .client__regular {
   padding-top: 60px;
-  padding-bottom: 30px;
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 28px;
   line-height: 1.17;
@@ -977,7 +977,9 @@ img {
 }
 @media screen and (max-width: 1199px) {
   .subscribe__button {
-    display: block;
+    align-items: center;
+    justify-content: center;
+    display: flex;
     margin: 0 auto;
   }
 }
@@ -991,7 +993,7 @@ img {
 
 .subscribe__input {
   align-items: center;
-  min-width: 358px;
+  min-width: 100%;
   height: 50px;
   padding: 0;
   padding-left: 16px;
@@ -1195,6 +1197,7 @@ img {
 .field-group__policy-label {
   position: relative;
   display: flex;
+  font-size: 12px;
   gap: 8px;
   align-items: center;
   justify-content: center;
