--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -158,6 +158,7 @@
 .field-group__policy-label {
   position: relative;
   display: flex;
+  font-size: 12px;
   gap: 8px;
   align-items: center;
   justify-content: center;
