--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -2,7 +2,7 @@
   background: #f5f4fa;
 }
 .our-team__title {
-  padding-bottom: 30px;
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 28px;
   line-height: 1.17;
