--- a/sass/components/_client-section.scss
+++ b/sass/components/_client-section.scss
@@ -4,7 +4,7 @@
 
 .client__regular {
   padding-top: 60px;
-  padding-bottom: 30px;
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 28px;
   line-height: 1.17;
