--- a/sass/components/_subscribe-form.scss
+++ b/sass/components/_subscribe-form.scss
@@ -41,7 +41,9 @@
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (max-width: 1199px) {
-    display: block;
+    align-items: center;
+    justify-content: center;
+    display: flex;
     margin: 0 auto;
   }
 }
@@ -59,7 +61,7 @@
     margin-bottom: 20px;
   }
   align-items: center;
-  min-width: 358px;
+  min-width: 100%;
   height: 50px;
   padding: 0;
   padding-left: 16px;
