--- a/css/main.css
+++ b/css/main.css
@@ -691,6 +691,11 @@ img {
 .social-links__link {
   text-decoration: none;
 }
+@media screen and (max-width: 479px) {
+  .social-links__link {
+    font-size: 12px;
+  }
+}
 
 .social-net__link {
   display: flex;
@@ -933,6 +938,7 @@ img {
 }
 
 .subscribe__title {
+  display: flex;
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
@@ -946,12 +952,12 @@ img {
   justify-content: center;
   gap: 12px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1199px) {
   .subscribe__form {
     display: block;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .subscribe__form {
     display: flex;
   }
@@ -993,7 +999,6 @@ img {
 
 .subscribe__input {
   align-items: center;
-  min-width: 100%;
   height: 50px;
   padding: 0;
   padding-left: 16px;
@@ -1006,6 +1011,13 @@ img {
 }
 @media screen and (max-width: 767px) {
   .subscribe__input {
+    margin-bottom: 20px;
+    min-width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .subscribe__input {
+    width: 450px;
     margin-bottom: 20px;
   }
 }
@@ -1202,9 +1214,15 @@ img {
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
+  margin-top: 20px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
+}
+@media screen and (max-width: 479px) {
+  .field-group__policy-label {
+    font-size: 8px;
+  }
 }
 
 .visually-hidden {
@@ -1248,6 +1266,11 @@ img {
   line-height: 24px;
   letter-spacing: 0.03em;
   color: #2196f3;
+}
+@media screen and (max-width: 479px) {
+  .policy-link {
+    font-size: 10px;
+  }
 }
 
 .portfolio__list {
