--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -7,6 +7,10 @@
 
 .social-links__link {
   text-decoration: none;
+
+  @media screen and (max-width: 479px) {
+    font-size: 12px;
+  }
 }
 
 .social-net__link {
