--- a/sass/components/_subscribe-form.scss
+++ b/sass/components/_subscribe-form.scss
@@ -1,4 +1,5 @@
 .subscribe__title {
+  display: flex;
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
@@ -11,13 +12,13 @@
 
 .subscribe__form {
   justify-content: center;
-
   gap: 12px;
-  @media screen and (max-width: 767px) {
+
+  @media screen and (max-width: 1199px) {
     display: block;
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1200px) {
     display: flex;
   }
 }
@@ -59,9 +60,15 @@
 .subscribe__input {
   @media screen and (max-width: 767px) {
     margin-bottom: 20px;
+    min-width: 100%;
   }
+
+  @media screen and (min-width: 768px) {
+    width: 450px;
+    margin-bottom: 20px;
+  }
+
   align-items: center;
-  min-width: 100%;
   height: 50px;
   padding: 0;
   padding-left: 16px;
