--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -158,7 +158,7 @@
 .field-group__policy-label {
   position: relative;
   display: flex;
-  font-size: 12px;
+  font-size: 14px;
   gap: 8px;
   align-items: center;
   justify-content: center;
@@ -170,6 +170,10 @@
 
   @media screen and (max-width: 479px) {
     font-size: 8px;
+  }
+
+  @media screen and (max-width: 1199px) {
+    font-size: 12px;
   }
 }
 
