--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -9,6 +9,10 @@
   text-align: center;
   letter-spacing: 0.03em;
   color: $main-color-black;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+  }
 }
 
 img {
